# investigate_ogle_data

./: .isort.cfg  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg
data/blg-0086/: fchart.fts  fchart.ps  lcurve.ps  lcurve_s.ps  phot.csv
data/blg-0086/manual_data/: full_data.csv
data/blg-0086/phot_fitting_results/: fit_result.json
data/blg-0173/: phot.csv
data/blg-0173/phot_fitting_results/: fit_result.json
data/blg-0230/: fchart.fts  fchart.ps  lcurve.ps  lcurve_s.ps  phot.csv
data/blg-0230/grid_search_2d/: grid_search1_results.json  grid_search2_results.json  grid_search3_results.json  grid_search4_results.json  grid_search_table1.csv  grid_search_table2.csv  grid_search_table3.csv  grid_search_table4.csv
data/blg-0230/grid_search_2d_monte_carlo_results/: results.json
data/blg-0230/grid_search_4d/: grid_search1_results.json  grid_search2_results.json
data/blg-0230/manual_data/: full_data.csv  parabolic_data.csv
data/blg-0230/phot_fitting_results/: fit_result.json
data/blg-0230/phot_monte_carlo_results/: results.json
data/blg-0238/: fchart.fts  fchart.ps  lcurve.ps  lcurve_s.ps  phot.csv
data/blg-0238/phot_fitting_results/: fit_result.json
data/blg-1330/: fchart.fts  fchart.ps  lcurve.ps  lcurve_s.ps  phot.csv
data/blg-1362/: fchart.fts  fchart.ps  lcurve.ps  lcurve_s.ps  phot.csv
data/blg-1373/: fchart.fts  fchart.ps  lcurve.ps  lcurve_s.ps  phot.csv
src/ogle/: __main__.py  constants.py  fit_data.py  grid_search.py  io_util.py  ogle_util.py  plot_util.py  random_data.py  search_point.py
src/ogle/cli/: __init__.py  (+4 more)
(+5 files in other folders)
