[metadata]
name = ogle

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
include_package_data = True
package_dir =
    = src
install_requires =
    click
    numpy
    matplotlib
    pandas
    scipy
    tqdm
    uncertainties
    joblib


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ogle = ogle.__main__:ogle_cli_group

[flake8]
ignore = E203